[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/SpriteSheets/Objects/sprite_trap_arrow_trap.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Environment/ArrowTrap/ArrowTrap.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Environment/ArrowTrap/Arrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/Character/attack.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "activate",
"speed": 8.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "retract",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": false,
"name": "disabled",
"speed": 1.0
} ]

[node name="ArrowTrap" type="AnimatedSprite" groups=["Trap"]]
frames = SubResource( 8 )
animation = "disabled"
playing = true
script = ExtResource( 2 )
arrow_scene = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 0, 80 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 20 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
pitch_scale = 0.5

[connection signal="animation_finished" from="." to="." method="_on_ArrowTrap_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
